--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
   "name": "vehic-update",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "TypeScript/JavaScript client for vehicle update proto",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist",
-    "src"
+    "proto"
   ],
   "scripts": {
-    "clean": "rm -rf dist",
-    "build:proto": "protoc --ts_out ./src --proto_path . vehicle_update.proto",
+    "generate": "npx buf generate",
     "build:ts": "tsc",
-    "build": "npm run clean && npm run build:proto && npm run build:ts",
-    "prepublishOnly": "npm run build"
+    "build": "npm run generate && npm run build:ts"
   },
   "keywords": [
     "proto",
@@ -22,17 +20,17 @@
   ],
   "author": "ebrugulec",
   "license": "ISC",
-  "devDependencies": {
-    "@bufbuild/protobuf": "^2.5.2",
-    "@connectrpc/connect": "^2.0.2",
-    "@connectrpc/connect-web": "^2.0.2",
-    "ts-proto": "^1.181.2",
-    "typescript": "^5.8.3"
-  },
-  "peerDependencies": {
-    "@bufbuild/protobuf": "^2.5.2"
-  },
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "@bufbuild/protobuf": "^2.6.0",
+    "@connectrpc/connect": "^2.0.2",
+    "@connectrpc/connect-web": "^2.0.2",
+    "typescript": "^5.8.3"
+  },
+  "devDependencies": {
+    "@bufbuild/protoc-gen-connect-es": "^0.13.0",
+    "@bufbuild/protoc-gen-es": "^1.10.1"
   }
 }
